<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">涂鸦工具</string>
    
    <string name="bao_cun">保存</string>
    <string name="tu_pian">图片</string>
    <string name="no_word"></string>
    <string name="menu_settings">Settings</string>
    
    <string name="qu_xiao">取消</string>
    <string name="pai_zhao">拍照</string>
    <string name="cong_xiao_cxz">从相册选择</string>
    
    <string name="fan_hui">返回</string>
    <string name="tu_pian_bj">图片编辑</string>
    <string name="que_ding">确定</string>
    
    <string name="chong_zhi">重置</string>
    <string name="xuan_zhuan">旋转</string>
    <string name="jian_qie">剪切</string>
    <string name="tu_ya">涂鸦</string>
    <string name="wen_zi">文字</string>

</resources>