<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <!-- 标题 -->
        <RelativeLayout
			android:id="@+id/frameHead"
			android:layout_width="fill_parent"
			android:layout_height="50dp"
			android:background="@drawable/header_bg">
			<Button
		        android:id="@+id/returnBtn"
		        style="@style/top_backbtn_style"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
		        android:text="@string/fan_hui"
		        android:layout_marginLeft="5dp" />
			<TextView
				android:id="@+id/title"
		        style="@style/textview_style_0"
		        android:text="@string/tu_pian_bj"
				android:layout_centerInParent="true"
				android:layout_marginLeft="130dp" />
			<Button
		        android:id="@+id/rightBtn"
		        style="@style/top_rightbtn_style"
		        android:minWidth="70dp"
		        android:text="@string/que_ding"
		        android:layout_alignParentRight="true"
		        android:layout_marginRight="5dp"
		        android:layout_centerVertical="true" />
		</RelativeLayout>
    </FrameLayout>
    
    <!-- tabs -->
    <LinearLayout
        android:id="@+id/tabs"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/tab_bg"
        android:orientation="horizontal">
        <RelativeLayout 
            android:id="@+id/tab0Layout"
            style="@style/doodle_tab_layout_style">
            <ImageView
                android:id="@+id/tab0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tabbtn0_imgedit_normal"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/no_word"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tab0"
                android:textSize="13sp"
                android:textColor="@color/doodle_tab_text"
                android:text="@string/chong_zhi"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <RelativeLayout 
            android:id="@+id/tab1Layout"
            style="@style/doodle_tab_layout_style">
            <ImageView
                android:id="@+id/tab1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tabbtn1_imgedit_normal"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/no_word"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tab1"
                android:textSize="13sp"
                android:textColor="@color/doodle_tab_text"
                android:text="@string/xuan_zhuan"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <RelativeLayout 
            android:id="@+id/tab2Layout"
            style="@style/doodle_tab_layout_style">
            <ImageView
                android:id="@+id/tab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tabbtn2_imgedit_normal"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/no_word"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tab2"
                android:textSize="13sp"
                android:textColor="@color/doodle_tab_text"
                android:text="@string/jian_qie"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <RelativeLayout 
            android:id="@+id/tab3Layout"
            style="@style/doodle_tab_layout_style">
            <ImageView
                android:id="@+id/tab3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tabbtn3_imgedit_normal"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/no_word"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tab3"
                android:textSize="13sp"
                android:textColor="@color/doodle_tab_text"
                android:text="@string/tu_ya"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <RelativeLayout 
            android:id="@+id/tab4Layout"
            style="@style/doodle_tab_layout_style">
            <ImageView
                android:id="@+id/tab4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tabbtn4_imgedit_normal"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/no_word"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tab4"
                android:textSize="13sp"
                android:textColor="@color/doodle_tab_text"
                android:text="@string/wen_zi"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>