<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/editPhotoBg"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_translucent" >
    <Button
        android:id="@+id/localPicBtn"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/actionsheet_top"
        android:text="@string/cong_xiao_cxz"
        android:textSize="16sp"
        android:textColor="@color/doodle_pan_blue"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_above="@+id/takePicBtn" />
    <Button
        android:id="@+id/takePicBtn"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/actionsheet_bottom"
        android:text="@string/pai_zhao"
        android:textSize="16sp"
        android:textColor="@color/doodle_pan_blue"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_above="@+id/cancelBtn" />
    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/actionsheet_single"
        android:text="@string/qu_xiao"
        android:textSize="16sp"
        android:textColor="@color/doodle_pan_blue"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true" />
</RelativeLayout>