<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <!-- 标题 -->
        <RelativeLayout
			android:id="@+id/frameHead"
			android:layout_width="fill_parent"
			android:layout_height="50dp"
			android:background="@drawable/header_bg">
			<Button
		        android:id="@+id/returnBtn"
		        style="@style/top_backbtn_style"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
		        android:text="@string/fan_hui"
		        android:layout_marginLeft="5dp" />
			<TextView
				android:id="@+id/title"
		        style="@style/textview_style_0"
		        android:text="@string/tu_pian_bj"
				android:layout_centerInParent="true"
				android:layout_marginLeft="130dp" />
			<Button
		        android:id="@+id/rightBtn"
		        style="@style/top_rightbtn_style"
		        android:minWidth="70dp"
		        android:text="@string/que_ding"
		        android:layout_alignParentRight="true"
		        android:layout_marginRight="5dp"
		        android:layout_centerVertical="true" />
		</RelativeLayout>
		<RelativeLayout 
		    android:id="@+id/doodleLayout"
		    android:layout_below="@+id/frameHead"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/operateLayout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/tab_bg">
        <!-- 重置 -->
        <RelativeLayout
            android:id="@+id/resetLayout"
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/bg_imgedit"
            android:clickable="true"
            android:paddingTop="4dp">
            <ImageView
                android:id="@+id/resetImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tabbtn0_imgedit_normal"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/no_word"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/resetImg"
                android:textSize="13sp"
                android:textColor="@color/doodle_tab_text"
                android:text="@string/chong_zhi"
                android:layout_centerHorizontal="true"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@drawable/line_imgedit"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/no_word"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@+id/resetLayout"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/penBtn"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="fill_parent"
                android:scaleType="centerInside"
                android:src="@drawable/tabbtn5_imgedit_normal"
                android:contentDescription="@string/no_word"/>
            <ImageView
                android:id="@+id/penBack"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="fill_parent"
                android:scaleType="centerInside"
                android:src="@drawable/tabbtn7_imgedit"
                android:clickable="true"
                android:contentDescription="@string/no_word"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>