<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_translucent" >
    <!-- 标题 -->
    <LinearLayout
        android:id="@+id/title"
        android:layout_height="50dp"
        android:layout_width="fill_parent"
        android:background="@color/color_white"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <RelativeLayout 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">
            <TextView 
                android:id="@+id/wenZi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wen_zi"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_centerInParent="true"/>
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/doodle_title_current"
                android:visibility="invisible"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/no_word"/>
        </RelativeLayout>
        <RelativeLayout 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">
            <TextView 
                android:id="@+id/tuPian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tu_pian"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_centerInParent="true"/>
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/doodle_title_current"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/no_word"/>
        </RelativeLayout>
    </LinearLayout>
    
    <!-- 涂鸦部分 -->
    <RelativeLayout
        android:id="@+id/tuyaBg"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_below="@+id/title"
        android:layout_above="@+id/selectOperate">
        <RelativeLayout
            android:id="@+id/doodleLayout"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent">
            <!-- 
            <com.xuan.tuya.view.DoodleLineView
	            android:id="@+id/tuYaPicView"
	            android:layout_height="fill_parent"
	            android:layout_width="fill_parent"
	            android:background="@color/color_white" />
	             -->
        </RelativeLayout>
        <Button 
            android:id="@+id/clearBtn"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:background="@drawable/doodle_clear"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>
    
    <FrameLayout 
        android:id="@+id/penOperate"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_above="@+id/selectOperate"
        android:background="@drawable/doodle_pickbrush_bg"
        android:visibility="gone">
        <!-- 颜色代码部分 -->
        <LinearLayout 
            android:id="@+id/pen_operate_color_layout"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <Button 
                android:id="@+id/pen_size_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/doodle_pen_thickness"
                android:layout_marginLeft="10dp"/>
            <ImageButton 
                android:id="@+id/colorBlack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/doodle_pan_black"
                android:layout_marginLeft="20dp"
                android:contentDescription="@string/no_word"/>
            <ImageButton 
                android:id="@+id/colorBlue"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:background="@color/doodle_pan_blue"
                android:contentDescription="@string/no_word"/>
            <ImageButton 
                android:id="@+id/colorGreen"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/doodle_pan_green"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/no_word"/>
            <ImageButton 
                android:id="@+id/colorYellow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/doodle_pan_yellow"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/no_word"/>
            <ImageButton 
                android:id="@+id/colorOrange"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/doodle_pan_orange"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/no_word"/>
            <ImageButton 
                android:id="@+id/colorRed"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/doodle_pan_red"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/no_word"/>
        </LinearLayout>
        
        <!-- 字体大小部分代码-->
        <LinearLayout 
            android:id="@+id/pen_operate_size_layout"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">
            <Button 
                android:id="@+id/pen_color_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/doodle_pen_color"
                android:layout_marginLeft="10dp"/>
            <com.xuan.tuya.view.PointView
                android:id="@+id/pen_size_6"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp" />
            <com.xuan.tuya.view.PointView
                android:id="@+id/pen_size_5"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp" />
            <com.xuan.tuya.view.PointView
                android:id="@+id/pen_size_4"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp" />
            <com.xuan.tuya.view.PointView
                android:id="@+id/pen_size_3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp" />
            <com.xuan.tuya.view.PointView
                android:id="@+id/pen_size_2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp" />
            <com.xuan.tuya.view.PointView
                android:id="@+id/pen_size_1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp" />
        </LinearLayout>
    </FrameLayout>
    
    <!-- 操作栏 -->
    <RelativeLayout 
        android:id="@+id/selectOperate"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:background="@color/doodle_operate_bg">
        <Button 
            android:id="@+id/brushBtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/doodle_icon_brush"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"/>
        <Button 
            android:id="@+id/backBtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/doodle_icon_back"
            android:layout_toRightOf="@+id/brushBtn"
            android:layout_marginLeft="10dp"/>
        <Button 
            android:id="@+id/picBtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/doodle_icon_picture"
            android:layout_toRightOf="@+id/backBtn"
            android:layout_marginLeft="10dp"/>
        <Button 
            android:id="@+id/saveBtn"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:background="@drawable/save_btn"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="@string/bao_cun"/>
    </RelativeLayout>
    
    <!-- 调用摄像头或者加载图片按钮布局 -->
    <RelativeLayout
        android:id="@+id/editPhotoBg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/color_translucent"
        android:visibility="gone">
        <Button
            android:id="@+id/localPicBtn"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/actionsheet_top"
            android:text="@string/cong_xiao_cxz"
            android:textSize="16sp"
            android:textColor="@color/doodle_pan_blue"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_above="@+id/takePicBtn" />
        <Button
            android:id="@+id/takePicBtn"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/actionsheet_bottom"
            android:text="@string/pai_zhao"
            android:textSize="16sp"
            android:textColor="@color/doodle_pan_blue"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_above="@+id/cancelBtn" />
        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/actionsheet_single"
            android:text="@string/qu_xiao"
            android:textSize="16sp"
            android:textColor="@color/doodle_pan_blue"
            android:layout_margin="10dp"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>
</RelativeLayout>